--- a/lw1/AlgorithmGeneratingCombinations/AlgorithmGeneratingCombinations/AlgorithmGeneratingCombinations.vcxproj
+++ b/lw1/AlgorithmGeneratingCombinations/AlgorithmGeneratingCombinations/AlgorithmGeneratingCombinations.vcxproj
@@ -145,6 +145,9 @@
   <ItemGroup>
     <ClCompile Include="AlgorithmGeneratingCombinations.cpp" />
   </ItemGroup>
+  <ItemGroup>
+    <Text Include="results.txt" />
+  </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
   </ImportGroup>
