сделал поиск точек сочленения. нужно доработать висячие точки

--- a/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj
+++ b/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj
@@ -144,6 +144,12 @@
   <ItemGroup>
     <Text Include="graph.txt" />
     <Text Include="graph2.txt" />
+    <Text Include="graph3.txt" />
+    <Text Include="graph4.txt" />
+    <Text Include="graph5.txt" />
+    <Text Include="graph6.txt" />
+    <Text Include="graph7.txt" />
+    <Text Include="graph8.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
