--- a/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj.filters
+++ b/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj.filters
@@ -22,5 +22,11 @@
   <ItemGroup>
     <Text Include="graph.txt" />
     <Text Include="graph2.txt" />
+    <Text Include="graph3.txt" />
+    <Text Include="graph4.txt" />
+    <Text Include="graph5.txt" />
+    <Text Include="graph6.txt" />
+    <Text Include="graph7.txt" />
+    <Text Include="graph8.txt" />
   </ItemGroup>
 </Project>
