доработал обработку висячих точек

--- a/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj
+++ b/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj
@@ -140,6 +140,7 @@
   </ItemDefinitionGroup>
   <ItemGroup>
     <ClCompile Include="ArticulationPoints.cpp" />
+    <ClCompile Include="functions.cpp" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="graph.txt" />
@@ -150,6 +151,9 @@
     <Text Include="graph6.txt" />
     <Text Include="graph7.txt" />
     <Text Include="graph8.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="functions.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
