--- a/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj.filters
+++ b/lw2/ArticulationPoints/ArticulationPoints/ArticulationPoints.vcxproj.filters
@@ -18,6 +18,9 @@
     <ClCompile Include="ArticulationPoints.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
+    <ClCompile Include="functions.cpp">
+      <Filter>Source Files</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <Text Include="graph.txt" />
@@ -28,5 +31,10 @@
     <Text Include="graph6.txt" />
     <Text Include="graph7.txt" />
     <Text Include="graph8.txt" />
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="functions.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
