--- a/lw4/HungarianAlgorithm/HungarianAlgorithm/HungarianAlgorithm.vcxproj
+++ b/lw4/HungarianAlgorithm/HungarianAlgorithm/HungarianAlgorithm.vcxproj
@@ -147,6 +147,7 @@
   </ItemGroup>
   <ItemGroup>
     <Text Include="matrix1.txt" />
+    <Text Include="matrix2.txt" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
